# skippyDB

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  GPU_ACCELERATION_PLAN.md  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  TODO.md
.github/workflows/: ci.yml
bench/: Cargo.toml  README.md
bench/results/: README.md  abA-resident-40m.json  abA-resident-5m.json  abB-perlevel-40m.json  abB-perlevel-5m.json  main-40m.json  main-5m-r2.json  main-5m-r3.json  main-5m.json  perlevel-default-40m.json  phase0-trace-5m.json  phase1a-40m.json  phase1a-5m-r2.json  phase1a-5m-r3.json  phase1a-5m.json  phase1b-40m.json  phase2-40m-r2.json  phase2-40m.json  phase3-fdatasync-5m.json  phase4-blake3-40m.json  postfix-perlevel-40m.json  postfix-resident-40m.json  subtrace-5m.json
bench/src/speed/: db_backend.rs  mdbx.rs  qmdb.rs  rocksdb.rs  shuffle_param.rs  test_gen.rs  test_helper.rs
docs/: api-reference.md  architecture.md  gpu-acceleration.md  gpu-integration-guide.md
flash-map/: Cargo.toml  LICENSE-APACHE  README.md
flash-map/benches/: throughput.rs
flash-map/examples/: blockchain_state.rs  dedup.rs
flash-map/src/: async_map.rs  cpu.rs  error.rs  gpu.rs  hash.rs  kernels.cu  lib.rs  rayon_cpu.rs
flash-map/tests/: correctness.rs
hpfile/: Cargo.toml
qmdb/: Cargo.toml  README.md
qmdb/benches/: hash_benchmarks.rs
qmdb/examples/: v2_demo.rs  v3_indexer.rs
qmdb/examples/v1_fuzz/: main.rs  refdb.rs
qmdb/src/: compactor.rs  config.rs  flusher.rs  lib.rs  metadb.rs  topology.rs  updater.rs
qmdb/src/entryfile/: entry.rs  entrybuffer.rs  entryfile.rs  helpers.rs
qmdb/src/gpu/: gpu_hasher.rs  gpu_node_store.rs  gpu_tests.rs  integration_tests.rs  mod.rs  sha256_kernel.cu
qmdb/src/indexer/: inmem.rs
qmdb/src/indexer/hybrid/: index_cache.rs  mod.rs  unit.rs
qmdb/src/merkletree/: check.rs  helpers.rs  tree.rs  twig.rs  twigfile.rs
qmdb/src/seqads/: entry_updater.rs
qmdb/src/stateless/: witnessupdater.rs
qmdb/src/tasks/: bptaskhub.rs  mod.rs  tasksmanager.rs
qmdb/src/utils/: activebits.rs  changeset.rs  hasher.rs  mod.rs  numa.rs  shortlist.rs
qmdb/test_tree_get_proof/data/entries0/: 0-1073741824
qmdb/test_tree_get_proof/data/entries1/: 0-1073741824
qmdb/test_tree_get_proof/data/entries10/: 0-1073741824
qmdb/test_tree_get_proof/data/entries11/: 0-1073741824
qmdb/test_tree_get_proof/data/entries12/: 0-1073741824
qmdb/test_tree_get_proof/data/entries13/: 0-1073741824
qmdb/test_tree_get_proof/data/entries14/: 0-1073741824
qmdb/test_tree_get_proof/data/entries15/: 0-1073741824
qmdb/test_tree_get_proof/data/entries2/: 0-1073741824
qmdb/test_tree_get_proof/data/entries3/: 0-1073741824
qmdb/test_tree_get_proof/data/entries4/: 0-1073741824
qmdb/test_tree_get_proof/data/entries5/: 0-1073741824
qmdb/test_tree_get_proof/data/entries6/: 0-1073741824
qmdb/test_tree_get_proof/data/entries7/: 0-1073741824
qmdb/test_tree_get_proof/data/entries8/: 0-1073741824
qmdb/test_tree_get_proof/data/entries9/: 0-1073741824
qmdb/test_tree_get_proof/metadb/: info.1
qmdb/tests/: active_bits_sync_parity.rs  comprehensive_tests.rs  cpu_gpu_sha256_parity.rs  metadb_shard_count_mismatch.rs  metadb_topology_roundtrip.rs  sync_upper_nodes_parity.rs  test_ads.rs  test_consistency_with_seqads.rs  test_entry.rs  test_for_each_active_entry.rs  test_proof.rs  test_recover.rs  test_tree.rs  twig_sync_parity.rs
