[package]
name = "flash-map"
version = "0.1.1"
edition = "2021"
authors = ["Naman Bajpai"]
description = "GPU-native concurrent hash map with bulk-only API. SoA layout, CUDA kernels, CPU fallback. Designed for blockchain state, HFT, and batch-parallel workloads."
license = "MIT OR Apache-2.0"
repository = "https://github.com/bajpainaman/flash-map"
homepage = "https://github.com/bajpainaman/flash-map"
readme = "README.md"
keywords = ["gpu", "cuda", "hashmap", "high-performance", "concurrent"]
categories = ["data-structures", "concurrency"]
exclude = ["target/", ".git/"]

[features]
default = ["cpu-fallback"]
cuda = ["dep:cudarc"]
cpu-fallback = []
rayon = ["dep:rayon"]
tokio = ["dep:tokio"]

[dependencies]
cudarc = { version = "0.12", optional = true, features = ["cuda-12060"] }
bytemuck = { version = "1.14", features = ["derive"] }
thiserror = "2"
rayon = { version = "1.10", optional = true }
tokio = { version = "1", optional = true, features = ["rt"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"

[[bench]]
name = "throughput"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
